# Proofy

./: .gitignore  pyproject.toml
proofy/: graph_widget.py  log_console.py  log_handler.py  main_window.py  proofy.py
proofy/widgets/: graph.py  graphwidget.py  index.thtml  log_console.py  log_handler.py  log_signals.py  logconsolewidget.py  loghandler.py  tools.py  toolswidget.py
tests/: test_proofy.py
