[tool.poetry]
name = "proofy"
version = "0.1.0"
description = ""
authors = ["emilberwald"]

[tool.poetry.dependencies]
python = "~3.8"
networkx = "^2.4"
pyside2 = "^5.14.2"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
